#597 refactoring api module user 부분 import 수정 (#600)